Fix image and stylesheet paths in index.html
the deployed version not working with the calling the root / then file. so have to change it

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
       crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
@@ -143,19 +143,19 @@
             </h2>
           </div>
           <div class="col-12 mt-5 mb-2">
-            <img src="/images/dog-img.jpg" alt="" class="profile-img" />
+            <img src="images/dog-img.jpg" alt="" class="profile-img" />
           </div>
           <div class="col-12">
             <p>pabbles, New York</p>
           </div>
           <div class="row">
             <div class="col-lg-3 my-1">
-              <img src="/images/techcrunch.png" alt="" height="30px" />
+              <img src="images/techcrunch.png" alt="" height="30px" />
             </div>
-            <div class="col-lg-3 my-1"><img src="/images/mashable.png" alt="" height="30px" /></div>
-            <div class="col-lg-3 my-1"><img src="/images/tnw.png" alt="" height="30px" /></div>
+            <div class="col-lg-3 my-1"><img src="images/mashable.png" alt="" height="30px" /></div>
+            <div class="col-lg-3 my-1"><img src="images/tnw.png" alt="" height="30px" /></div>
             <div class="col-lg-3 my-1">
-              <img src="/images/bizinsider.png" alt="" height="30px" />
+              <img src="images/bizinsider.png" alt="" height="30px" />
             </div>
           </div>
         </div>
